# owca-script

./: .gitignore  CMakeLists.txt  LICENSE  build.sh  compile_commands.json  owca.h  q-simple-1.py  q-simple-2.py  q.cpp  q.py  q2.cpp  run.cpp  test.sh  todo.txt
examples/: usage_1.cpp  usage_1.y  usage_2.cpp  usage_2.y  usage_3.cpp  usage_3.y  usage_4.cpp  usage_4.y
owca/: base.h  class.cpp  class.h  cmp_base.h  cmp_build_expression.cpp  cmp_build_expression.h  cmp_build_flow.cpp  cmp_build_flow.h  cmp_compiler.cpp  cmp_compiler.h  cmp_source.cpp  cmp_source.h  cmp_tokenize.cpp  compile_visible_items.h  debug_assert.h  debug_execution.h  debug_gc.h  debug_gc_test.h  debug_interface.h  debug_line_numbers.h  debug_memory_blocks.h  debug_opcodes.h  debug_strings.h  debug_time_it.h  defval.h  exception.h  exec_array.cpp  exec_array_object.cpp  exec_array_object.h  exec_base.cpp  exec_base.h  exec_bool.cpp  exec_callparams.h  exec_class.cpp  exec_class_int.cpp  exec_class_int.h  exec_class_object.cpp  exec_class_object.h  exec_compare_arrays.cpp  exec_compare_arrays.h  (+196 more)
owca-script/: allocation_base.cpp  allocation_base.h  array.cpp  array.h  ast_base.h  ast_block.cpp  ast_block.h  ast_class.cpp  ast_class.h  ast_compiler.cpp  ast_compiler.h  ast_expr_as_stat.cpp  ast_expr_as_stat.h  ast_expr_compare.cpp  ast_expr_compare.h  ast_expr_constant.cpp  ast_expr_constant.h  ast_expr_identifier.cpp  ast_expr_identifier.h  ast_expr_interpreted_string.cpp  ast_expr_interpreted_string.h  ast_expr_member.cpp  ast_expr_member.h  ast_expr_oper_1.cpp  ast_expr_oper_1.h  ast_expr_oper_2.cpp  ast_expr_oper_2.h  ast_expr_oper_x.cpp  ast_expr_oper_x.h  ast_find_stack_size.cpp  ast_find_stack_size.h  ast_for.cpp  ast_for.h  ast_function.cpp  ast_function.h  ast_if.cpp  ast_if.h  ast_loop_control.cpp  ast_loop_control.h  ast_return.cpp  (+97 more)
tests/: array.cpp  basic.cpp  buffer.cpp  class.cpp  compare.cpp  for.cpp  function.cpp  generator.cpp  if.cpp  map.cpp  max_number.py  performance.cpp  range.cpp  rc_q.cpp  set.cpp  storage.cpp  string.cpp  test.cpp  test.h  test1.cpp  test2.cpp  test_files.cpp  try.cpp  tuple.cpp  variable.cpp  while.cpp  with.cpp
tests/cases/: 000000  000001  000002  000003  000004  000005  000006  000007  000008  000009  000010  000011  000012  000013  000014  000015  000016  000017  000018  000019  000020  000021  000022  000023  000024  000025  000026  000027  000028  000029  000030  000031  000032  000033  000034  000035  000036  000037  000038  000039  (+11 more)
tests/cases/calling_lookup/: 001000  001001  001002  001003  001004  001005  001006  001007  001008  001009
tests/cases/calling_reference_counters/: 002000
tests/cases/cmp_build_expression/: 006000  006001  006002  006003  006004  006005  006006  006007  006008  006009  006010  006011  006012  006013  006014  006015  006016  006017  006018  006019  006020  006021  006022  006023  006024  006025  006026  006027  006028  006029  006030  006031  006032  006033  006034  006035  006036  006037  006038  006039  (+1 more)
tests/cases/cmp_build_flow/: 007000  007001  007002  007003  007004  007005  007006  007008  007009  007011  007012  007013  007014  007015  007016  007017  007018  007019  007020
tests/cases/cmp_compiler/: 008000
tests/cases/cmp_tokenize/: 009000  009001  009002  009003  009004  009005  009006  009007  009008  009009  009010  009011  009012
tests/cases/compiler_buildtree/: 010000  010001  010002  010003  010004  010005  010006  010007  010008  010009  010010  010011  010012  010013  010014  010015  010016  010017  010018  010019  010020  010021  010022  010023  010024  010025  010026  010027  010028  010029  010030  010031  010032  010033  010034  010035  010036  010037  010038  010039  (+114 more)
(+600 files in other folders)
